# airhunt

./: .gitignore  CLAUDE.md  package-lock.json  package.json
apps/mobile/: app.config.ts  app.json  package-lock.json  package.json  tsconfig.json
apps/mobile/__tests__/: api.test.ts  onchain.test.ts  store.test.ts
apps/mobile/app/: _layout.tsx  export.tsx  onboarding.tsx  portfolio.tsx  sybil.tsx
apps/mobile/app/(tabs)/: _layout.tsx  campaigns.tsx  dashboard.tsx  index.tsx  settings.tsx  wallets.tsx
apps/mobile/app/auth/: login.tsx
apps/mobile/app/campaign/: [id].tsx
apps/mobile/app/wallet/: [id].tsx
apps/mobile/components/: PlanGate.tsx
apps/mobile/lib/: api.ts  notifications.ts  onchain.ts  plan-gate.ts  store.ts  supabase-sync.ts  supabase.ts  theme.ts  types.ts
apps/mobile/scripts/: generate-icon.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/signup/: page.tsx
docs/: DESIGN.md  DEVELOPMENT.md  SECURITY.md
services/api/: Cargo.toml  Dockerfile  railway.toml
services/api/src/: config.rs  main.rs
services/api/src/middleware/: auth.rs  rate_limit.rs
services/api/src/models/: estimate.rs  mod.rs  portfolio.rs  sybil.rs  wallet.rs
services/api/src/routes/: estimator.rs  export.rs  health.rs  mod.rs  portfolio.rs  sybil.rs
services/api/src/services/: export_service.rs  mod.rs  onchain.rs  portfolio_service.rs  sybil_analyzer.rs  value_estimator.rs
services/api/src/utils/: eth_math.rs  mod.rs  rate_limiter.rs
